--- a/video.html
+++ b/video.html
@@ -22,7 +22,7 @@
     Bora aprender sobre vídeos!
     </h1>
     <video 
-    src="midia/cachorro.mp4" 
+    src="cachorro.mp4" 
     controls 
     style=
     "height: 400px;
@@ -36,7 +36,7 @@
     <br>
 
     <video
-    src="midia/capotei-o-corsa-aqui-kkkkkkkkkk.mp4" 
+    src="capotei-o-corsa-aqui-kkkkkkkkkk.mp4" 
     controls 
     style=
     "height: 400px;
@@ -50,7 +50,7 @@
     <br>
 
     <video
-    src="midia/vazou-eu-no-banho.mp4"
+    src="vazou-eu-no-banho.mp4"
     controls
     style=
     "height: 400px;
