--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 
     style=
     "background-color: rgb(255, 255, 255); 
-    width: 550px;
+    width: 150px;
     text-align: center;
     position:relative;
     border-radius: 0.4ch;
@@ -19,7 +19,7 @@
     margin-left: auto;
     margin-right: auto;"
     >
-    Bora aprender sobre vídeos!
+    TikTok
     </h1>
     <video 
     src="cachorro.mp4" 
