--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,10 +19,10 @@
     margin-left: auto;
     margin-right: auto;"
     >
-    TikTok
+    TikTok 
     </h1>
     <video 
-    src="cachorro.mp4" 
+    src="midia/cachorro.mp4" 
     controls 
     style=
     "height: 400px;
@@ -36,7 +36,7 @@
     <br>
 
     <video
-    src="capotei-o-corsa-aqui-kkkkkkkkkk.mp4" 
+    src="midia/capotei-o-corsa-aqui-kkkkkkkkkk.mp4" 
     controls 
     style=
     "height: 400px;
@@ -50,7 +50,7 @@
     <br>
 
     <video
-    src="vazou-eu-no-banho.mp4"
+    src="midia/vazou-eu-no-banho.mp4"
     controls
     style=
     "height: 400px;
